--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <link rel="icon" type="image/x-icon" href="img/content/favicon.ico"/>
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
   </head>
-  <body>
+  <body class="notranslate" translate="notranslate">
     <div data-barba="wrapper">
       <!-- PAGE PRELOADER -->
       <div class="preloader text-center bg-dark-2" id="js-preloader" data-arts-theme-text="light">
