--- a/index.html
+++ b/index.html
@@ -377,11 +377,11 @@
                     
    <ul>
 
-       <li><a href="#" target="_blank" title="facebook"><i class="fa fa-facebook"></i></a></li>
-       <li><a href="#" target="_blank" title="instagram"><i class="fa fa-instagram"></i></a></li>
-       <li><a href="#" target="_blank" title="youtube"><i class="fa fa-youtube"></i></a></li>
-       <li><a href="#" target="_blank" title="youtube"><i class="fa fa-whatsapp"></i></a></li>
-       <li><a href="#" target="_blank" title="google-plus"><i class="fa fa-google"></i></a></li>
+       <li><a href="https://www.facebook.com/profile.php?id=100081891527921" target="_blank" title="facebook"><i class="fa fa-facebook"></i></a></li>
+       <li><a href="https://instagram.com/alessandra.brianna.model/" target="_blank" title="instagram"><i class="fa fa-instagram"></i></a></li>
+       <li><a href="https://youtube.com/channel/UCQnRpd6JC1-vZ_r5CEnD5NQ" target="_blank" title="youtube"><i class="fa fa-youtube"></i></a></li>
+       <li><a href="https://wa.link/gjrnlu" target="_blank" title="youtube"><i class="fa fa-whatsapp"></i></a></li>
+       <li><a href="mailto:alessandralima1964@gmail.com" target="_blank" title="google-plus"><i class="fa fa-google"></i></a></li>
                     
    </ul>
 
